# Californium-252

./: CONTRIBUTING.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  configure.ac  libcalifornium252consensus.pc.in
build_msvc/: .gitignore  README.md  californium252.sln  californium252_config.h  msvc-autogen.py  vcpkg.json
contrib/: README.md  californium252-cli.bash-completion  californium252-qt.pro  californium252-tx.bash-completion  californium252d.bash-completion  gitian-build.py  install_db4.sh  valgrind.supp
depends/: Makefile  README.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  californium252-conf.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  multiprocess.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  californium252-cli.1  californium252-qt.1  californium252-tx.1  californium252-wallet.1  californium252d.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  addrman.h  californium252-cli-res.rc  californium252-cli.cpp  californium252-tx-res.rc  chain.h  (+36 more)
(+483 files in other folders)
