dist_man1_MANS=

if BUILD_CALIFORNIUMD
  dist_man1_MANS+=californiumd.1
endif

if ENABLE_QT
  dist_man1_MANS+=californium-qt.1
endif

if BUILD_CALIFORNIUM_CLI
  dist_man1_MANS+=californium-cli.1
endif

if BUILD_CALIFORNIUM_TX
  dist_man1_MANS+=californium-tx.1
endif

if ENABLE_WALLET
if BUILD_CALIFORNIUM_WALLET
  dist_man1_MANS+=californium-wallet.1
endif
endif
